feat(tmux): source config with display message

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,6 @@
+# reload the tmux config 
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux config reloaded!"
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
