feat(shell): map window split

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,3 +5,7 @@ bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux config 
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
+
+# set window split
+bind-key l split-window -h
+bind-key k split-window 
