refactor(shell): remap window split

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,5 +7,7 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # set window split
-bind-key l split-window -h
-bind-key k split-window 
+bind-key h split-window -h
+bind-key v split-window 
+
+
