refactor(shell): change bind split window

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,7 +7,6 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # set window split
+bind-key v split-window -v
 bind-key h split-window -h
-bind-key v split-window 
-
 
