feat(shell): set tpm as plugin manager

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,3 +10,8 @@ bind-key C-a send-prefix
 bind-key v split-window -v
 bind-key h split-window -h
 
+# Tmux Plugin Manager
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+run '~/.config/tmux/plugins/tpm/tpm'
