--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -14,4 +14,7 @@ bind-key h split-window -h
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
+# Easy navigation of pane/window
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
 run '~/.config/tmux/plugins/tpm/tpm'
