--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,9 @@
+set -g default-terminal "screen-256color"
+
+set -g status-bg colour232
+
+set -g status-fg colour246
+
 # reload the tmux config 
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux config reloaded!"
 
