--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,8 +1,13 @@
+# Set status color
 set -g default-terminal "screen-256color"
 
 set -g status-bg colour232
 
 set -g status-fg colour246
+
+# Sets current selected window to colour208/orange
+set-window-option -g window-status-current-style fg=colour208
+
 
 # reload the tmux config 
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux config reloaded!"
