--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,8 +5,11 @@ set -g status-bg colour232
 
 set -g status-fg colour246
 
-# Sets current selected window to colour208/orange
+# Set current selected window to colour208/orange
 set-window-option -g window-status-current-style fg=colour208
+
+# Set border color to orange
+set -g pane-active-border-style fg=colour208,bg=default
 
 
 # reload the tmux config 
