--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,9 +1,10 @@
 # Set status color
 set -g default-terminal "screen-256color"
-
 set -g status-bg colour232
-
 set -g status-fg colour246
+
+# message text
+set -g message-style bg='#00a300' 
 
 # Set current selected window to colour208/orange
 set-window-option -g window-status-current-style fg=colour208
@@ -11,6 +12,9 @@ set-window-option -g window-status-current-style fg=colour208
 # Set border color to orange
 set -g pane-active-border-style fg=colour208,bg=default
 
+# Start index of window/pane with 1
+set -g base-index 1
+setw -g pane-base-index 1
 
 # reload the tmux config 
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux config reloaded!"
