feat(shell): set escape time

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -16,6 +16,10 @@ set -g pane-active-border-style fg=colour208,bg=default
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Escape-key is delayed
+# Set escape-time 
+set-option -sg escape-time 0
+
 # reload the tmux config 
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux config reloaded!"
 
