:up: update(shell): change navigation map keys

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -11,8 +11,17 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # set window split
-bind-key v split-window -v
-bind-key h split-window -h
+unbind %
+bind | split-window -h 
+
+unbind '"'
+bind - split-window -v
+
+# map navigation pane
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Tmux Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
