:up: update(shell): set border color

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -30,4 +30,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # Easy navigation of pane/window
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+# Border Color
+set -g pane-active-border-style "bg=default,fg=#7E9CD8"
+set -g pane-border-style fg=#FFFFFF
+
 run '~/.config/tmux/plugins/tpm/tpm'
