--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -23,6 +23,21 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# colors
+set -g window-status-format '#[bg=#dfff03,fg=#f8f8f2#dfff03] #I.#(pwd="#{pane_current_path}"; echo ${pwd####*/}): #W#F '
+set -g window-status-current-format '#[bg=colour234,fg=#ff3c00] #I.#(pwd="#{pane_current_path}"; echo ${pwd####*/}): #W#F '
+
+set -g status-left-length 40
+set -g status-right-length 60
+set -g status-position bottom
+set -g status-fg white
+set -g status-bg "colour234"
+set -g status-left '#[fg=#b125ea,bg=colour234,bold] #S » #I #P '
+set -g status-right '#[bg=white,fg=colour232,bold] %m-%d-%y %H:%M:%S #[default]'
+
+set-option -sg escape-time 10 
+set-option -g focus-events on
+
 # Tmux Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
