--- a/.gitconfig
+++ b/.gitconfig
@@ -1,23 +1,28 @@
 [user]
-	email = ravencarlostrodrigo@gmail.com
-	name = Raven Rodrigo
+ email = ravencarlostrodrigo@gmail.com
+ name = Raven Rodrigo
 
 [color]
-	ui = auto
+ ui = auto
 
 [color "branch"]
-	current = yellow bold
-	local = green bold
-	remote = cyan bold
+ current = yellow bold
+ local = green bold
+ remote = cyan bold
 
 [color "diff"]
-	meta = yellow bold
-	frag = magenta bold
-	old = red bold
-	new = green bold
-	whitespace = red reverse
+ meta = yellow bold
+ frag = magenta bold
+ old = red bold
+ new = green bold
+ whitespace = red reverse
 
 [color "status"]
-	added = green bold
-	changed = yellow bold
-	untracked = red bold
+ added = green bold
+ changed = yellow bold
+ untracked = red bold
+[init]
+ defaultBranch = master
+[filter "tabspace"]
+ smudge = unexpand --tabs=1 --first-only
+ clean = expand --tabs=1 --initial
