:up: config(tmux); modify tmux setup

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,52 +1,59 @@
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-# reload the tmux config 
-bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux config reloaded!"
+# Reload the tmux config 
+  bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux config reloaded!"
 
-# remap prefix from 'C-b' to 'C-a'
-unbind C-b
+# Remap prefix from 'C-b' to 'C-a'
+  unbind C-b
+  set-option -g prefix C-a
+  bind-key C-a send-prefix
 
-set-option -g prefix C-a
-
-bind-key C-a send-prefix
-
-# set window split
-unbind %
-bind | split-window -h 
-
-unbind '"'
-bind - split-window -v
+# Set window split
+  unbind %
+  bind | split-window -h
+  unbind '"'
+  bind - split-window -v
 
 # map navigation pane
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+  bind h select-pane -L
+  bind j select-pane -D
+  bind k select-pane -U
+  bind l select-pane -R
 
-# colors
-set -g window-status-format '#[bg=#dfff03,fg=#f8f8f2#dfff03] #I.#(pwd="#{pane_current_path}"; echo ${pwd####*/}): #W#F '
-set -g window-status-current-format '#[bg=colour234,fg=#ff3c00] #I.#(pwd="#{pane_current_path}"; echo ${pwd####*/}): #W#F '
+# Status
+  set -g status-position bottom
+  set -g status on
+  set -g status-interval 6
+  set -g status-style "fg=brightwhite, bg=default"
 
-set -g status-left-length 40
-set -g status-right-length 60
-set -g status-position bottom
-set -g status-fg white
-set -g status-bg "colour234"
-set -g status-left '#[fg=#b125ea,bg=colour234,bold] #S » #I #P '
-set -g status-right '#[bg=white,fg=colour232,bold] %m-%d-%y %H:%M:%S #[default]'
+## Left
+  set -g status-left-length 40
+  set -g status-left "#[fg=#7E9CD8,bg=default] #(whoami) #[fg=brightwhite, bg=default] "
 
-set-option -sg escape-time 10 
-set-option -g focus-events on
+## Center
+  set -g window-status-format "#[fg=white,bg=default] #I #W "
+  set -g window-status-current-format "#[fg=white,bg=default] #I #W "
+  set -g window-status-separator "#[fg=brightblack,bg=default]|"
+  set -g status-justify centre
+
+## Right
+  set -g status-right-length 40
+  set -g status-right "#[fg=#C34043,bg=default] #(lsb_release -d | cut -f 2) "
+
+  set -g status-bg default
+
+  set-option -sg escape-time 10
+  set-option -g focus-events on
 
 # Tmux Plugin Manager
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+  set -g @plugin 'tmux-plugins/tpm'
+  set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Easy navigation of pane/window
-set -g @plugin 'christoomey/vim-tmux-navigator'
+  set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Border Color
-set -g pane-active-border-style "bg=default,fg=#7E9CD8"
-set -g pane-border-style fg=#FFFFFF
+  set -g pane-active-border-style "bg=default,fg=#7E9CD8"
+  set -g pane-border-style fg=#FFFFFF
 
-run '~/.config/tmux/plugins/tpm/tpm'
+  run '~/.config/tmux/plugins/tpm/tpm'
