--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,8 @@
 font_family JetBrainsMono Nerd Font
-font_size 100
+font_size 16
+
+bold_font JetBrainsMono Nerd Font Bold
+italic_font JetBrainsMono Nerd Font Italic
+
 adjust_line_height 125%
 box_drawing_scale 0.001, 0.5, 1, 1.75
