--- a/.gitconfig
+++ b/.gitconfig
@@ -1,14 +1,14 @@
 [user]
- email = ravencarlostrodrigo@gmail.com
- name = Raven Rodrigo
+	email = ravencarlostrodrigo@gmail.com
+	name = Raven Rodrigo
 
 [color]
  ui = auto
 
 [color "branch"]
- current = yellow bold
- local = green bold
- remote = cyan bold
+ current = yellow reverse
+ local = yellow
+ remote = green
 
 [color "diff"]
  meta = yellow bold
