--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -3,7 +3,9 @@
 
 format = """
 [┌───](bold green) $username\
-$directory$git_branch$git_status
+$directory$git_branch$git_status\
+$package
+[┨](bold green)
 [└─ [$os](fg:color_orange)$shell❯](bold green) """
 
 add_newline = true
@@ -38,6 +40,7 @@ disabled = false
 [directory]
 home_symbol = '🏠 ~'
 truncation_length = 3
+truncation_symbol = "…/"
 fish_style_pwd_dir_length=2
 read_only_style = '197'
 read_only = ' 🔒 '
@@ -52,15 +55,18 @@ format = '[$all_status$ahead_behind]($style) '
 style = 'bold green'
 conflicted = '🏳'
 up_to_date = ''
-untracked = '⚠ '
+untracked = '🤷 '
 ahead = '⇡${count}'
 diverged = '⇕⇡${ahead_count}⇣${behind_count}'
 behind = '⇣${count}'
-stashed = ' '
-modified = ' '
+stashed = '📦'
+modified = ' 📝 '
 staged = '[++\($count\)](green)'
 renamed = '🔧 '
 deleted = '🗑️ '
+
+[git_metrics]
+added_style = "bold blue"
 
 [shell]
 disabled = false
@@ -77,3 +83,36 @@ disabled = true
 style='bold dimmed white'
 threshold = 1
 format = "$symbol [${ram}(|${swap})]($style) "
+
+[package]
+format = " [📦 $version](bold green)"
+
+[docker_context]
+format = "via [🐋 $context](blue bold)"
+disabled = false
+only_with_files = true
+detect_files = ["docker-compose.yml", "docker-compose.yaml", "Dockerfile"]
+detect_folders = true
+
+[battery]
+full_symbol = "🔋"
+charging_symbol = "⚡️"
+discharging_symbol = "💀"
+
+[[battery.display]]  # "bold red" style when capacity is between 0% and 10%
+threshold = 10
+style = "bold red"
+
+[[battery.display]]  # "bold yellow" style when capacity is between 10% and 30%
+threshold = 30
+style = "bold yellow"
+
+[[battery.display]]
+threshold = 100
+style = "bold green"
+
+[localip]
+ssh_only = false
+format = "@[$localipv4](purple) "
+disabled = false
+deleted_style = "bold red"
