:up: update(config): add background opacity kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,3 +8,5 @@ italic_font JetBrainsMono Nerd Font Italic
 
 adjust_line_height 125%
 box_drawing_scale 0.001, 0.5, 1, 1.75
+
+background_opacity 1.0
