--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,4 +9,6 @@ italic_font JetBrainsMono Nerd Font Italic
 adjust_line_height 125%
 box_drawing_scale 0.001, 0.5, 1, 1.75
 
-background_opacity 1.0
+background_opacity .90
+
+hide_window_decorations yes
