--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,8 +7,8 @@ bold_font JetBrainsMono Nerd Font Bold
 italic_font JetBrainsMono Nerd Font Italic
 
 adjust_line_height 125%
-box_drawing_scale 0.001, 0.5, 1, 1.75
+box_drawing_scale 0.001, 1, 1, 1.75
 
 background_opacity .90
 
-hide_window_decorations yes
+remember_window_size yes
