--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,6 +9,13 @@ italic_font JetBrainsMono Nerd Font Italic
 adjust_line_height 125%
 box_drawing_scale 0.001, 1, 1, 1.75
 
-background_opacity .90
+background_opacity 0.92
 
 remember_window_size yes
+
+draw_minimal_borders yes
+window_padding_width 2
+window_border_width 0
+hide_window_decorations yes
+titlebar-only yes
+active_border_color none
